# OpenARaw

./: ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  CORPUS.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml  publish.yml
crates/openaraw/: Cargo.toml
crates/openaraw-py/: Cargo.toml
crates/openaraw-py/src/: lib.rs
crates/openaraw/examples/: corpus_scan.rs  to_mzml.rs
crates/openaraw/src/: reader.rs
crates/openaraw/src/raw/: lzf.rs  metadata.rs  mod.rs  msmasscal.rs  mspeak.rs  msperiodicactuals.rs  msprofile.rs  msscan.rs
crates/openaraw/tests/: conformance.rs
docs/: docusaurus.config.ts  package.json  sidebars.ts  wrangler.jsonc
docs/.wrangler/tmp/deploy-C9SYxW/: no-op-worker.js  no-op-worker.js.map
docs/.wrangler/tmp/deploy-aCMq2n/: no-op-worker.js.map
docs/.wrangler/tmp/deploy-trIJ1O/: no-op-worker.js.map
docs/.wrangler/tmp/deploy-ueWDLC/: no-op-worker.js.map
docs/docs/: changelog.md  install.md  intro.md  license.md  quickstart.md
docs/docs/format/: known-limitations.md  msmasscal.md  mspeak.md  msprofile.md  msscan.md  overview.md  secondary-bins.md
docs/docs/guide/: instrument-families.md  mzml-export.md  python-api.md  reader.md  scan-data.md
docs/format/: 01-msscan.md  02-secondary-bins.md  03-mspeak.md  04-msprofile.md  05-known-limitations.md  05-msmasscal.md  06-known-limitations.md  07-run-metadata.md
scripts/: check-release-ready.sh
