[workspace]
resolver = "2"
members = ["crates/openaraw", "crates/openaraw-py"]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenARaw"
homepage = "https://sigilweaver.app/openaraw/"
documentation = "https://sigilweaver.app/openaraw/docs/"
keywords = ["mass-spectrometry", "agilent", "masshunter", "raw", "proteomics"]
categories = ["parser-implementations", "science"]

[workspace.dependencies]
openaraw = { path = "crates/openaraw" }
openmassspec-core = "1.0.0"
pyo3 = { version = "0.29", features = ["extension-module"] }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
