[package]
name = "openaraw-py"
description = "Python bindings for the OpenARaw Agilent MassHunter .d reader."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "openaraw"
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "allow"

[dependencies]
openaraw = { workspace = true }
openmassspec-core.workspace = true
pyo3 = { workspace = true }
